kubernetes/foundation/integrations/mesh/secrets-vault-virtual-services.yaml
#
# TODO Not installing for now because the upgrade-to-https is not working
#      from the http endpoint.  Will investigate, fix, and enable
#      the Vault UI for secrets sometime later...
#
---
#
# Allow traffic into Vault UI via Istio.
#
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/kubedemo-gateway
  http:
    - match:
        - uri:
            prefix: "/vault/"
        - uri:
            exact: "/vault"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: vault-ui-http-to-https
            port:
              number: 8200
---
#
# Upgrade the HTTP connection to HTTPS for Vault:
#
#     https://istio.io/latest/docs/reference/config/networking/destination-rule/#ClientTLSSettings
#
# Still on port 8200, upgrade to https via vault-ui Service in vault Namespace.
#
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vault-ui-http-to-https
  namespace: vault
spec:
  host: vault-ui
  trafficPolicy:
    tls:
      mode: SIMPLE
